fixed overflow scroll

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,9 @@
   }
   html {
     font-family: "Roboto", sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
   }
   h1 {
     @apply text-6xl;
